# citra-forked

./: .gitmodules  CMakeLists.txt  build-libretro-ios.sh  citra_libretro_cleanup.diff  citra_libretro_patch.diff  core_cpp_fix.diff  disable_heavy_tasks.py  final_fix.py  fix_all.py  fix_citra_libretro.py  fix_citra_libretro_v2.py  fix_cmake.py  fix_cpsr_mask.py  fix_dyncom.py  fix_heap_overflow.py  fix_libretro_cmake.py  fix_libretro_safety.py  fix_loader_cia.py  fix_mobile_portrait.diff  fix_rasterizer_logic.py  fix_retro_load.diff  fix_retro_run.py  fix_sw_framebuffer_v2.py  fix_sw_rasterizer.py  libretro_patch.txt  libretro_window_cpp.diff  libretro_window_h.diff  optimize.py  optimize_audio.py  optimize_copy.py  optimize_copy_v2.py  optimize_dyncom.diff  optimize_dyncom.py  optimize_libretro.py  optimize_libretro_neon.py  optimize_rasterizer.py  optimize_rasterizer_v2.py  optimize_rasterizer_v3.py  optimize_renderer_sw.py  optimize_sw.py  (+7 more)
.github/workflows/: ios.yml
CMakeModules/: DownloadExternals.cmake  GenerateSCMRev.cmake
src/: CMakeLists.txt
src/audio_core/: libretro_sink.cpp
src/citra_libretro/: CMakeLists.txt  citra_libretro.cpp  environment.cpp  environment.h
src/citra_libretro/emu_window/: libretro_window.cpp  libretro_window.h
src/citra_libretro/input/: mouse_tracker.h
src/common/: CMakeLists.txt  file_util.cpp  file_util.h  settings.cpp  settings.h
src/common/linux/: gamemode.cpp
src/core/: CMakeLists.txt  core.cpp  core_timing.h
src/core/arm/: exclusive_monitor.cpp
src/core/arm/dyncom/: arm_dyncom.cpp  arm_dyncom_interpreter.cpp
src/core/arm/skyeye_common/: armstate.cpp  armstate.h
src/core/file_sys/: cia_container.cpp  ncch_container.cpp  ncch_container.h
src/core/frontend/: framebuffer_layout.cpp
src/core/hle/service/cfg/: cfg.cpp
src/core/loader/: 3dsx.cpp  3dsx.h  elf.cpp  elf.h  loader.cpp  loader.h  ncch.cpp  ncch.h  smdh.cpp  smdh.h
src/tests/: CMakeLists.txt
src/video_core/: CMakeLists.txt  renderer_base.cpp  video_core.cpp
src/video_core/renderer_metal/: make metal renderer there.txt
src/video_core/renderer_software/: renderer_software.cpp  sw_framebuffer.cpp  sw_rasterizer.cpp
src/video_core/shader/: shader.cpp  shader_jit.cpp  shader_jit.h
